--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">SociosAliaga</string>
+    <string name="buscar">Buscar</string>
+    <string name="pagado">Pagado</string>
+    <string name="introduce_numero_socio">Número de socio</string>
 </resources>
