Bug al añadir un socio nuevo (FIXED)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="confirm_dialog_delete">¿Deseas eliminar el socio?</string>
     <string name="socio_remove_success">Socio eliminado correctamente</string>
     <string name="socio_remove_error">Socio eliminado</string>
+    <string name="add_new_socio_success">Socio añadido con éxito</string>
 </resources>
