--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,12 @@
 <resources>
-    <string name="app_name">SociosAliaga</string>
+    <string name="app_name">Socios C.D Aliaga</string>
     <string name="buscar">Buscar</string>
     <string name="pagado">Pagado</string>
     <string name="introduce_numero_socio">Número de socio</string>
     <string name="error_conexion">Error al conectar a la base de datos, compruebe su conexión a internet.</string>
     <string name="añadir_socio_nombre">Nombre del nuevo socio</string>
     <string name="guardar">Guardar</string>
-    <string name="añadir_socio">Añadir socio</string>
+    <string name="añadir_socio">Añadir</string>
     <string name="no_name">No puedes dejar un socio con el nombre vacío</string>
     <string name="add_new_socio_succes">Se ha añadido el socio correctamente</string>
     <string name="add_new_socio_error">No se ha podido añadir el nuevo socio</string>
